--- a/src/app/settings/settings.page.html
+++ b/src/app/settings/settings.page.html
@@ -42,7 +42,7 @@
                     </ion-item>
                     <ion-item color="light" class="ion-margin-vertical with-checkbox">
                         <ion-label>App Tutorial</ion-label>
-                        <ion-button (click)="startTutorial()">Start <ion-icon name="play" slot="end"></ion-icon></ion-button>
+                        <ion-button (click)="tutorial.start()">Start <ion-icon name="play" slot="end"></ion-icon></ion-button>
                     </ion-item>
                 </ion-list>
             </ion-col>
