last work before I start my mission

--- a/src/app/settings/settings.page.html
+++ b/src/app/settings/settings.page.html
@@ -1,7 +1,7 @@
 <ion-header>
     <ion-toolbar color="primary">
         <ion-buttons slot="start">
-            <ion-back-button defaultHref="/home"></ion-back-button>
+            <ion-back-button defaultHref="/home" (click)="goingBack()"></ion-back-button>
         </ion-buttons>
         <ion-title>App Settings</ion-title>
     </ion-toolbar>
